--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <body>
 
     <H1>Vice Versa</H1>
-    <form>
+    <form action="{% url 'reverse' %}">
         <textarea cols="30" name="message" rows="10"></textarea><br><br>
         <input type="submit" value="Reverse!">
     </form>
