--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Reverse!</h1>
+    <h1>Your text:</h1>
+
+    {{usertext}}
+
+    <h1>Reversed text:</h1>
+    {{reversedtext}}
+
 </body>
 </html>
