--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 
     <H1>Vice Versa</H1>
     <form action="{% url 'reverse' %}">
-        <textarea cols="30" name="message" rows="10"></textarea><br><br>
+        <textarea cols="30" name="usertext" rows="10" ></textarea><br><br>
         <input type="submit" value="Reverse!">
     </form>
 
