--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Your text:</h1>
+    <h1>Your text is {{wordcount}} words:</h1>
 
     {{usertext}}
 
